# Sigilo

./: .gitignore  Cargo.toml  Makefile.toml  README.md  masscan.txt  rustfmt.toml
src/: main.rs
src/entity/: mod.rs  player.rs  prelude.rs  server.rs
