[package]
name = "sigilo"
version = "1.0.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "Scan and collect Minecraft Servers using masscan and craftping"
readme = "README.md"
repository = "https://github.com/ShayBox/Sigilo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
craftping = { git = "https://github.com/kiwiyou/craftping.git", features = ["async-tokio"] }
dotenvy_macro = "0.15.1"
eyre = "0.6.8"
futures = "0.3.25"
sea-orm = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }